--- a/Classes/BrandViewController.xib
+++ b/Classes/BrandViewController.xib
@@ -47,6 +47,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{0, 82}, {320, 335}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="294114201"/>
 						<int key="IBUIContentMode">4</int>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -61,6 +62,7 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrame">{{0, 82}, {320, 334}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView"/>
 						<object class="NSColor" key="IBUIBackgroundColor" id="567185113">
 							<int key="NSColorSpace">3</int>
@@ -89,6 +91,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrameSize">{320, 82}</string>
 								<reference key="NSSuperview" ref="931002531"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="8979935"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -102,7 +105,8 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{228, 0}, {92, 80}}</string>
 								<reference key="NSSuperview" ref="931002531"/>
-								<reference key="NSNextKeyView" ref="834440710"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="727651201"/>
 								<object class="NSColor" key="IBUIBackgroundColor">
 									<int key="NSColorSpace">1</int>
 									<bytes key="NSRGB">MC4yNDcwNTg4MjM1IDAuNzU2ODYyNzQ1MSAwLjE1Mjk0MTE3NjUAA</bytes>
@@ -114,7 +118,8 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{15, 26}, {205, 31}}</string>
 								<reference key="NSSuperview" ref="931002531"/>
-								<reference key="NSNextKeyView" ref="753936601"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="212507411"/>
 								<reference key="IBUIBackgroundColor" ref="567185113"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -150,7 +155,8 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{16, 57}, {171, 21}}</string>
 								<reference key="NSSuperview" ref="931002531"/>
-								<reference key="NSNextKeyView" ref="727651201"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="753936601"/>
 								<reference key="IBUIBackgroundColor" ref="567185113"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -182,7 +188,8 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{241, 0}, {59, 80}}</string>
 								<reference key="NSSuperview" ref="931002531"/>
-								<reference key="NSNextKeyView" ref="35680421"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="834440710"/>
 								<reference key="IBUIBackgroundColor" ref="567185113"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -214,7 +221,8 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{12, 33}, {20, 20}}</string>
 								<reference key="NSSuperview" ref="931002531"/>
-								<reference key="NSNextKeyView" ref="592381345"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="593386173"/>
 								<reference key="IBUIBackgroundColor" ref="567185113"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
@@ -231,7 +239,8 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{296, 33}, {10, 15}}</string>
 								<reference key="NSSuperview" ref="931002531"/>
-								<reference key="NSNextKeyView" ref="212507411"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="35680421"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<object class="NSCustomResource" key="IBUIImage">
@@ -244,6 +253,8 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{15, 0}, {205, 57}}</string>
 								<reference key="NSSuperview" ref="931002531"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="592381345"/>
 								<reference key="IBUIBackgroundColor" ref="567185113"/>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 							</object>
@@ -252,6 +263,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrameSize">{320, 80}</string>
 								<reference key="NSSuperview" ref="931002531"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="315472020"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -281,6 +293,7 @@
 						</object>
 						<string key="NSFrameSize">{320, 82}</string>
 						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="770675179"/>
 						<reference key="IBUIBackgroundColor" ref="71954518"/>
 						<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
@@ -289,6 +302,7 @@
 				</object>
 				<string key="NSFrame">{{0, 64}, {320, 416}}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="931002531"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -313,6 +327,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{22, 16}, {278, 45}}</string>
 						<reference key="NSSuperview" ref="675763469"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView"/>
 						<reference key="IBUIBackgroundColor" ref="567185113"/>
 						<bool key="IBUIOpaque">NO</bool>
@@ -338,6 +353,7 @@
 				</object>
 				<string key="NSFrameSize">{320, 77}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="483880266"/>
 				<reference key="IBUIBackgroundColor" ref="567185113"/>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -352,6 +368,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{14, 7}, {73, 20}}</string>
 						<reference key="NSSuperview" ref="508609008"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="638825365"/>
 						<reference key="IBUIBackgroundColor" ref="567185113"/>
 						<bool key="IBUIOpaque">NO</bool>
@@ -363,7 +380,7 @@
 						<nil key="IBUIHighlightedColor"/>
 						<object class="NSColor" key="IBUIShadowColor">
 							<int key="NSColorSpace">3</int>
-							<bytes key="NSWhite">MC43NTQwMzIyNTgxAA</bytes>
+							<bytes key="NSWhite">MC42NDkxOTM1NDg0AA</bytes>
 						</object>
 						<string key="IBUIShadowOffset">{0, 1}</string>
 						<int key="IBUIBaselineAdjustment">1</int>
@@ -383,6 +400,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{14, 31}, {285, 21}}</string>
 						<reference key="NSSuperview" ref="508609008"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="10126787"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -413,6 +431,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{23, 53}, {223, 21}}</string>
 						<reference key="NSSuperview" ref="508609008"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView"/>
 						<reference key="IBUIBackgroundColor" ref="567185113"/>
 						<bool key="IBUIOpaque">NO</bool>
@@ -424,7 +443,7 @@
 						<nil key="IBUIHighlightedColor"/>
 						<object class="NSColor" key="IBUIShadowColor">
 							<int key="NSColorSpace">3</int>
-							<bytes key="NSWhite">MC43Mzc5MDMyMjU4AA</bytes>
+							<bytes key="NSWhite">MC42NQA</bytes>
 						</object>
 						<string key="IBUIShadowOffset">{0, 1}</string>
 						<int key="IBUIBaselineAdjustment">1</int>
@@ -442,6 +461,7 @@
 				</object>
 				<string key="NSFrameSize">{320, 79}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="540104078"/>
 				<reference key="IBUIBackgroundColor" ref="567185113"/>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -785,7 +805,147 @@
 			<nil key="sourceID"/>
 			<int key="maxID">67</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<bool key="EncodedWithXMLCoder">YES</bool>
+				<object class="IBPartialClassDescription">
+					<string key="className">BALabel</string>
+					<string key="superclassName">UILabel</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/BALabel.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">BrandViewController</string>
+					<string key="superclassName">UIViewController</string>
+					<object class="NSMutableDictionary" key="actions">
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>showOtherBrandsCategory:</string>
+							<string>showScoreCard</string>
+						</object>
+						<object class="NSMutableArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>id</string>
+							<string>id</string>
+						</object>
+					</object>
+					<object class="NSMutableDictionary" key="actionInfosByName">
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>showOtherBrandsCategory:</string>
+							<string>showScoreCard</string>
+						</object>
+						<object class="NSMutableArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<object class="IBActionInfo">
+								<string key="name">showOtherBrandsCategory:</string>
+								<string key="candidateClassName">id</string>
+							</object>
+							<object class="IBActionInfo">
+								<string key="name">showScoreCard</string>
+								<string key="candidateClassName">id</string>
+							</object>
+						</object>
+					</object>
+					<object class="NSMutableDictionary" key="outlets">
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>brandLabel</string>
+							<string>categoriesTableView</string>
+							<string>categoryLabel</string>
+							<string>companyLabel</string>
+							<string>companyView</string>
+							<string>findAlternateView</string>
+							<string>partnerIcon</string>
+							<string>scoreBackgroundColor</string>
+							<string>scoreLabel</string>
+							<string>tableHeaderView</string>
+						</object>
+						<object class="NSMutableArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>BALabel</string>
+							<string>UITableView</string>
+							<string>UILabel</string>
+							<string>UILabel</string>
+							<string>UIView</string>
+							<string>UIView</string>
+							<string>UIImageView</string>
+							<string>UIView</string>
+							<string>UILabel</string>
+							<string>UIView</string>
+						</object>
+					</object>
+					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>brandLabel</string>
+							<string>categoriesTableView</string>
+							<string>categoryLabel</string>
+							<string>companyLabel</string>
+							<string>companyView</string>
+							<string>findAlternateView</string>
+							<string>partnerIcon</string>
+							<string>scoreBackgroundColor</string>
+							<string>scoreLabel</string>
+							<string>tableHeaderView</string>
+						</object>
+						<object class="NSMutableArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<object class="IBToOneOutletInfo">
+								<string key="name">brandLabel</string>
+								<string key="candidateClassName">BALabel</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">categoriesTableView</string>
+								<string key="candidateClassName">UITableView</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">categoryLabel</string>
+								<string key="candidateClassName">UILabel</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">companyLabel</string>
+								<string key="candidateClassName">UILabel</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">companyView</string>
+								<string key="candidateClassName">UIView</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">findAlternateView</string>
+								<string key="candidateClassName">UIView</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">partnerIcon</string>
+								<string key="candidateClassName">UIImageView</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">scoreBackgroundColor</string>
+								<string key="candidateClassName">UIView</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">scoreLabel</string>
+								<string key="candidateClassName">UILabel</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">tableHeaderView</string>
+								<string key="candidateClassName">UIView</string>
+							</object>
+						</object>
+					</object>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/BrandViewController.h</string>
+					</object>
+				</object>
+			</object>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDevelopmentDependencies">
